syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";

message ConsensusMessageChunkInfo {
    TransactionID initialMessageTransactionID = 1; // TransactionID of the first chunk, get copied to every subsequent chunk in a long message.
    int32 totalChunks = 2; // Total number of chunks in the message.
    int32 chunkNumber = 3; // The sequence number (from 1 to totalChunks) of the current chunk in the message.
}

message ConsensusSubmitMessageTransactionBody {
    TopicID topicID = 1; // Topic to submit message to.
    bytes message = 2; // Message to be submitted. Max size of the Transaction (including signatures) is 4kB.
    ConsensusMessageChunkInfo chunkInfo = 3; // Optional information of the current chunk in a long message.
}
